# gedcom-toolkit

./: .gitignore  README.md  pyproject.toml
data/sample/: ambiguous.ged  broken.ged  completeness.ged  duplicates.ged  extended.ged  places.ged  research.ged  sample.ged  sources.ged
gedcomtoolkit/: cli.py  completeness.py  dates.py  duplicates.py  graph.py  models.py  parser.py  places.py  relationship.py  relationship_naming.py  research.py  search.py  sources.py  validate.py
gedcomtoolkit/commands/: completeness.py  duplicates.py  findid.py  findrelationship.py  places.py  rn.py  sources.py  stats.py  validate.py
notebooks/: 01_exploration.ipynb
tests/: conftest.py  test_cli_completeness.py  test_cli_duplicates.py  test_cli_findid.py  test_cli_findrelationship.py  test_cli_places.py  test_cli_rn.py  test_cli_sources.py  test_cli_stats.py  test_cli_validate.py  test_completeness.py  test_dates.py  test_duplicates.py  test_graph.py  test_parser.py  test_places.py  test_relationship.py  test_relationship_naming.py  test_research.py  test_search.py  test_sources.py  test_validate.py
