[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcom-toolkit"
version = "0.1.0"
description = "A CLI and library for exploring, validating, and querying GEDCOM family tree files as graphs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steve" }]
dependencies = [
    "click>=8.1",
    "ged4py>=0.4",
    "networkx>=3.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
notebook = [
    "jupyter",
    "matplotlib",
]

[project.scripts]
gedcom = "gedcomtoolkit.cli:cli"

[tool.setuptools.packages.find]
include = ["gedcomtoolkit*"]
